fixed layout issue logo

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -232,7 +232,7 @@
             font-size: 22px;
         }
         @include media-query($on-palm) {
-            font-size: 20px;
+            font-size: 17px;
         }
     }
 
@@ -240,7 +240,7 @@
         font-size: 20px;
 
         @include media-query($on-laptop) {
-            font-size: 18px;
+            font-size: 14px;
         }
     }
 }
@@ -248,6 +248,14 @@
 a.div-link {
     color: inherit;
     text-decoration: none;
+}
+
+#home-logo{
+  top: 20%;
+
+    @include media-query($on-palm) {
+        top: 15%;
+    }
 }
 
 
